# ac-home-assist

./: .gitignore  DEPLOYMENT.md  README.md  TODO.md  architecture.md  constraints.md  docker-compose.yml  flash.sh  market-analysis.md  monitor.sh  mqtt-hub.md  pilot-phase.md  shopping-list.md  smart-plug-installation-guide.md  source-idf.sh  use-case.md
.claude/: launch.json
backend/: requirements.txt  run.sh
backend/api/: admin.py  apps.py  dashboard_urls.py  energy_model.py  models.py  mqtt_manager.py  shelly_em.py  urls.py  views.py  weather.py
backend/api/migrations/: 0001_initial.py  0002_smartplugevent_energy_voltage_current.py  0003_alter_pendingcommand_command_type.py  0004_hub_last_network_scan.py  0005_shelly_em_device.py
backend/api/templates/: dashboard.html
backend/config/: settings.py  urls.py
firmware/zigbee-hub/: CMakeLists.txt  TODO.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
firmware/zigbee-hub/main/: CMakeLists.txt  ac_schedule.c  ac_schedule.h  http_reporter.c  http_reporter.h  hub_mqtt.c  hub_mqtt.h  main.c  nvs_store.c  nvs_store.h  wifi_manager.c  wifi_manager.h  zigbee_coordinator.c  zigbee_coordinator.h
mosquitto/config/: mosquitto.conf
