idf_component_register(
    SRCS
        "main.c"
        "zigbee_coordinator.c"
        "wifi_manager.c"
        "ac_schedule.c"
        "http_reporter.c"
        "hub_mqtt.c"
        "nvs_store.c"
    INCLUDE_DIRS "."
    REQUIRES
        espressif__esp-zigbee-lib
        esp_wifi
        esp_http_client
        esp_http_server
        mqtt
        nvs_flash
        lwip
        esp_timer
        json
)
